# School-management

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
docs/: ERD.md  IMPLEMENTATION_PLAN.md
school_management/: hooks.py  install.py
school_management/config/: desktop.py
school_management/public/css/: school_management.css
school_management/public/js/: school_management.js
school_management/reporting/: create_print.py  create_print_2.py  create_print_ar.py  install_official_report_card.py  official_print.py  official_report_card.txt  official_report_card_template.html  official_student_report_card.html  readme.txt  setup_lazy.py  setup_official.py
school_management/school_management/: api.py
school_management/school_management/doctype/assessment_component/: assessment_component.json  assessment_component.py
school_management/school_management/doctype/assessment_scheme/: assessment_scheme.json  assessment_scheme.py
school_management/school_management/doctype/curriculum_subject/: curriculum_subject.json  curriculum_subject.py
school_management/school_management/doctype/grade_level/: grade_level.json  grade_level.py
school_management/school_management/doctype/gradebook/: gradebook.json  gradebook.py
school_management/school_management/doctype/school_academic_term/: school_academic_term.json  school_academic_term.py
school_management/school_management/doctype/school_academic_year/: school_academic_year.json  school_academic_year.py
school_management/school_management/services/: gradebook.py
(+23 files in other folders)
