[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "school_management"
version = "0.0.1"
description = "Custom ERPNext school management app"
authors = [{name = "Hasan Alhendi"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.bench.dev-dependencies]
